src/objects/THD_Sales__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Loaded__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HD_Cust_ID__c</fullName>
        <externalId>true</externalId>
        <label>HD Cust ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LYTD_formula__c</fullName>
        <formula>and(Month_Year__c &lt;= date(year($Setup.Current_Month_POS__c.Current_Month_POS__c)-1,month($Setup.Current_Month_POS__c.Current_Month_POS__c),day( $Setup.Current_Month_POS__c.Start_Month__c )),Month_Year__c &gt;=date(year( $Setup.Current_Month_POS__c.Start_Month__c )-1,month( $Setup.Current_Month_POS__c.Start_Month__c ),day( $Setup.Current_Month_POS__c.Start_Month__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LYTD formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LY_C_C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Last year C &amp; C to be manually updated at year end via crm fusion.  This field is used as the rollup summary trigger to be displayed on the account</description>
        <label>LY C &amp; C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LY_To_date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Last year same time frame as this year.  To be populated manually via crm fusion.</description>
        <label>LY To date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_Year__c</fullName>
        <description>This filed will rpimarily indicate the month/year. The day value is irrelevant.</description>
        <label>Month_Year</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POS_Order_Type__c</fullName>
        <label>POS Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash &amp; Carry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Behr</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roll_Year_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be set via crm fusion on a daily basis.  This is a rollup summary indicator that will display on the account</description>
        <label>Roll Year Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Account_ID__c</fullName>
        <label>SFDC Account #</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>THD Sales</relationshipLabel>
        <relationshipName>THD_Sales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store</label>
        <referenceTo>Home_Depot_Store__c</referenceTo>
        <relationshipLabel>THD Sales</relationshipLabel>
        <relationshipName>THD_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TYTD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TYTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TYTD_formula__c</fullName>
        <formula>and(  Month_Year__c  &lt;= $Setup.Current_Month_POS__c.Current_Month_POS__c ,Month_Year__c  &gt;= $Setup.Current_Month_POS__c.Start_Month__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TYTD formula</label>
        <type>Checkbox</type>
    </fields>
    <label>THD Sales</label>
    <nameField>
        <displayFormat>THD#{000000000}</displayFormat>
        <label>THD#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>THD Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>